<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:transitionGroup="true"
    android:fillViewport="true"
    android:id="@+id/FullPage"
    android:background="#c0000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/FrontButton"
                android:background="@drawable/front"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal|center_horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/LeftButton"
                android:background="@drawable/left"
                android:layout_gravity="left" />

            <Button
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/SwitchSpeed"
                android:background="@drawable/centrebutton"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/RightButton"
                android:background="@drawable/right"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/BackButton"
                android:background="@drawable/back"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/SpeedValueLabel"
            android:id="@+id/SpeedValueLabel"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ChaneBy150Label"
            android:id="@+id/ChaneBy150Label"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DecreaseButton"
                    android:id="@+id/DecreaseButton"
                    android:layout_gravity="left"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/IncreaseButton"
                    android:layout_toStartOf="@+id/IncreaseButton" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IncreaseButton"
                    android:id="@+id/IncreaseButton"
                    android:layout_gravity="right"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/BluetoothMustBeOnLabel"
                android:id="@+id/BluetoothMustBeOnLabel"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disconnect"
                android:id="@+id/disconnect"
                android:layout_gravity="left"
                android:onClick="disconnect"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BluetoothDeviceListButton"
                android:id="@+id/bluetoothDeviceListButton"
                android:layout_gravity="right"
                android:onClick="showDeviceList"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ConnectionStatusLabel"
                android:id="@+id/ConnectionStatusLabel"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Not Yet Tried"
                android:id="@+id/Connection"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DetailsPageButton"
            android:id="@+id/SwitchPage"
            android:layout_gravity="center_horizontal"
            android:onClick="ShowAppDetails" />

    </LinearLayout>
</ScrollView>